feat(/command, pom.xml /storage MessageHandler.java): 新增一堆新命令,修改配置文件,修改启动类
[skip ci]